--- a/mythesis.tex
+++ b/mythesis.tex
@@ -178,7 +178,7 @@ $keywords: ~Neutron ~stars, ~Accreting ~millisecond ~pulsars, ~Pulse ~profile ~m
 
 \pagenumbering{gobble}
 \section*{Acknowledgements}
-First of all, I would like to thank my supervisors Professor Juri Poutanen and Joonas Nättilä for a very interesting and challenging topic. The support I got was extremely helpful, especially the theoretical advices from Juri, and the tools of analysis and all the other support from Joonas. I would also like to thank all the people in the astrophysics research group for the interesting discussions and support in
+First of all, I would like to thank my supervisors Professor Juri Poutanen and Joonas Nättilä for a very interesting and challenging topic. The support I got was extremely helpful, especially the theoretical advice from Juri, and the tools of analysis and all the other support from Joonas. I would also like to thank all the people in the astrophysics research group for the interesting discussions and support in
 general. Finally, I wish to thank my family and friends %and especially Laura
 for support and encouragement throughout my studies.
  
@@ -330,7 +330,7 @@ where $r$ is the distance from the center of the star. Thus, at $r=R$, $~\nu_{\m
 Generally, the mass-radius ($M-R$) relation is determined by the equations of hydrostatic equilibrium. For a general relativistic and spherically symmetric (non-rotating) object %under hydrostatic equilibrium 
 these are the so-called Tolman-Oppenheimer-Volkoff equations %(Tolman,
 %1934 \cite{tolman}; Oppenheimer \& Volkoff, 1939 \cite{oppenheimer})
-\cite{tolman}\cite{oppenheimer}:
+\cite{tolman} \cite{oppenheimer}:
 \be
  \frac{\d \mathcal{P}}{\d r} = -\frac{G[m(r)+4 \pi r^{3}\mathcal{P}/c^{2}](\rho_{\mathrm{m}} + \mathcal{P}/c^{2})}{r[r-2Gm(r)/c^{2}]},
 \ee 
@@ -438,8 +438,8 @@ After the first two outbursts, \source \ has gone into outburst several times re
 %pulse profiles from which %phase?
 
 
-The X-ray spectrum of the outbursts have also been analysed, and there is evidence for a two component-model including a blackbody at lower energies and a hard Comptonization component at higher energies \cite{twocompmod} %http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?2002MNRAS.331..141G&defaultprint=YES&filetype=.pdf]
-. The heated hot spot on the neutron star surface is interpreted to produce the blackbody flux. The Comptonization is produced above the spot in an accretion shock. This shock is created as the plasma abruptly decelerates close to the neutron star surface. % at the bottom of the magnetic field lines.
+The X-ray spectrum of the outbursts have also been analyzed, and there is evidence for a two component-model including a blackbody at lower energies and a hard Comptonization component at higher energies \cite{twocompmod}. %http://articles.adsabs.harvard.edu/cgi-bin/nph-iarticle_query?2002MNRAS.331..141G&defaultprint=YES&filetype=.pdf]
+The heated hot spot on the neutron star surface is interpreted to produce the blackbody flux. The Comptonization is produced above the spot in an accretion shock. This shock is created as the plasma abruptly decelerates close to the neutron star surface. % at the bottom of the magnetic field lines.
 
 
 
@@ -490,10 +490,11 @@ There have been many different attempts to constrain the masses and radii of neu
 
 
 The coherent flux oscillations at the rotational frequency (the light curves) of accreting millisecond pulsars (described in the first chapter) can be modeled with different models. One example of the observed pulse profiles (of \source) is shown in Figure \ref{fig:saxdata}. The model presented here assumes that the radiation is originated from one or two of the polar caps of the star. General and special relativistic effects have been taken into account using a so-called Schwarzschild-Doppler (S+D) approximation %(Miller, Lamb 1998   
-\cite{millerlamb98}%http://adsabs.harvard.edu/abs/1998ApJ...499L..37M
+\cite{millerlamb98} %http://adsabs.harvard.edu/abs/1998ApJ...499L..37M
 %, Poutanen, Gierlinski 2003 
 \cite{poutagierlinskisax}. In the S+D approximation the effects of general relativity (gravitational light bending) are modeled as though the star is not rotating using the Schwarzschild metric and the formalism specified by
-Pechenick, Ftaclas, \& Cohen (1983) \cite{pechenick}. Rotational effects have been approximated by using special relativistic Doppler transformations as though the star is a rotating object with no gravitational field. The oblate shapes of the rapidly rotating neutron stars have also been taken into account using an empirical formula for the oblate shape \cite{algendy} \cite{morsink}.
+Pechenick {\it et al.} (1983) %, Ftaclas, \& Cohen (1983)
+\cite{pechenick}. Rotational effects have been approximated by using special relativistic Doppler transformations as though the star is a rotating object with no gravitational field. The oblate shapes of the rapidly rotating neutron stars have also been taken into account using an empirical formula for the oblate shape \cite{algendy} \cite{morsink}.
 
 %Rotational effects are added by introducing Doppler terms as though the star is a rotating object with no gravitational field. The oblate shape of the rapidly rotating neutron stars have also been taken account using an empirical formula for the oblate shape.
 
@@ -714,7 +715,7 @@ where $\delta$ is the Doppler factor formulated as
 \ee
 Using equation (\ref{eq:k0prime2}), we obtain
 \be \label{eq:aberr2}
-\cos\sigma' =   \Dop \ \cos\sigma ,
+\cos\sigma' =   \Dop \ \cos\sigma.
 \ee
  
 Making use of equation (\ref{eq:k02}) the zenith angle has the value
@@ -784,7 +785,7 @@ The impact parameter $b$ depends only on the bending angle $\psi$, but not on $\
 %in the non-rotating frame near the stellar surface is $\d S=\Dop\ \d S'$
 
 The apparent area of the infinitesimal spot measured by the observer in the non-rotating frame near the stellar surface %(but also at infinity) %not true? .. note: dS*cos(sigma) = Lorentz invariant
-is $\d S=\Dop\ \d S'$ \cite{terrell}\cite{lightman75}.
+is $\d S=\Dop\ \d S'$ \cite{terrell} \cite{lightman75}.
 %(see Terrell 1959 \cite{terrell} or Lightman {\it et al}. 1975 \cite{lightman75}). %; Ghisellini 1999) %http://journals.aps.org/pr/pdf/10.1103/PhysRev.116.1041 (terrell)
 %lightman75 = problem book in relativity and gravitation (found in Tuorla)
 %didin't found $\d S=\Dop\ \d S'$
@@ -792,7 +793,7 @@ We also know the relation between $\sigma$ and $\sigma'$ from the relativistic a
 \be \label{eq:Salpha2}
 \d S\ \cos\sigma = \d S'\ \cos\sigma', 
 \ee
-which shows that the spot area projected on to the plane perpendicular to the photon direction is Lorentz invariant \cite{lightman75}\cite{lindbland85}. %(see e.g.  Lightman et al. 1975 \cite{lightman75} or 
+which shows that the spot area projected on to the plane perpendicular to the photon direction is Lorentz invariant \cite{lightman75} \cite{lindbland85}. %(see e.g.  Lightman et al. 1975 \cite{lightman75} or 
 %Problem book in relativity and gravitation
 %Lind \& Blandford 1985 \cite{lindbland85}). 
 This area is also called a photon beam cross-section.
@@ -817,12 +818,12 @@ In case of stars with lower compactness (weak gravity) $\rg \ll R$, so $u\ll 1$,
 %results in the following  relation between the monochromatic
 %observed and local intensities
 
-We have now obtained the solid angle $\d\Omega$ needed to calculate the flux from our spot with equation (\ref{eq:dF_E2}). However, we still need to find out an expression for intensity $I_{\ene}$. The intensity is also different in the static frame of the distant observer than in the local frame comoving with the spot due to both gravitational redshift and Doppler effects. The relation between monochromatic observed and local intensities is \cite{mtw}\cite{rybicki}%(see e.g. Misner et. al. 1973 \cite{mtw} or Rybicki \& Lightman 1979 \cite{rybicki})%\citep[see e.g.][]{mtw73,rl79}:
+We have now obtained the solid angle $\d\Omega$ needed to calculate the flux from our spot with equation (\ref{eq:dF_E2}). However, we still need to find out an expression for intensity $I_{\ene}$. The intensity is also different in the static frame of the distant observer than in the local frame comoving with the spot due to both gravitational redshift and Doppler effects. The relation between monochromatic observed and local intensities is \cite{mtw} \cite{rybicki}%(see e.g. Misner et. al. 1973 \cite{mtw} or Rybicki \& Lightman 1979 \cite{rybicki})%\citep[see e.g.][]{mtw73,rl79}:
 \be
 I_{\ene} = \left (\frac{E}{E'}\right )^3 I'_{\ene'} (\sigma'),
 \ee
 where $E/E'=\Dop \sqrt{1-u}$. Here $I'_{\ene'}(\sigma')$ is the intensity computed in the corotating frame. The dependency of redshift ($1+z = 1/\sqrt{1-u}$) to the power of $-3$ can be understood by noting that $I_{\ene} \propto \nu^{3}$ and $\nu = \nu'(1+z)^{-1}$.
-For the bolometric intensity the relation to frequency goes as $\nu^{4}$ and one gets
+For the bolometric intensity the relation to frequency goes as $\nu^{4}$, and one gets
 \be \label{eq:bolointensity}
 I_{\bolo}= \left (\Dop \sqrt{1-u} \right )^4 I_{\bolo}'(\sigma') .
 \ee
@@ -839,7 +840,7 @@ The bolometric flux reads
 \d F_{\bolo}= (1-u)\ \Dop^5 \
 I_{\bolo}'(\sigma')  \cos\sigma \frac{\d\cos\alpha}{\d\cos\psi} \frac{\d S'}{D^2} .
 \ee
-The radiation spectrum can be e.g., a blackbody, with effective temperature $T_{\mathrm{eff}}$ or a power-law spectrum. We can take for example a power-law $I'_{\ene'}(\sigma') \propto E '^{-(\lambda-1)}$ which does not depend on the angle $\sigma'$. Here $\lambda$ is the photon spectral index. With this spectrum we get
+The radiation spectrum can be e.g., a blackbody, with effective temperature $T_{\mathrm{eff}}$, or a power-law spectrum. We can take for example a power-law $I'_{\ene'}(\sigma') \propto E '^{-(\lambda-1)}$ which does not depend on the angle $\sigma'$. Here $\lambda$ is the photon spectral index. With this spectrum we get
 \be \label{eq:int_trans2}
 I'_{\ene'}(\sigma') = I'_{\ene}(\sigma')
 \left( \Dop \sqrt{1-u} \right)^{\lambda-1} .
@@ -853,8 +854,8 @@ may be then expressed as
 We note that the equation for the bolometric flux (\ref{eq:fluxbolo2})
 can be obtained as a special case of equation (\ref{eq:fluxplaw2}) by setting $\lambda=2$. 
 
-Let us look the expression (\ref{eq:fluxbolo2}) for the bolometric flux more carefully. We see that there is a difference by a factor $\Dop^5$ between the flux from a rapidly rotating star and that from a slowly rotating star. One power of the Doppler factor came from the change in the projected area due to aberration as we already mentioned. From the four other powers of Doppler factor (appearing in the equation \ref{eq:bolointensity}) two comes from the solid angle transformation, one from the energy and one from the time contraction of photon arrival \cite{rybicki}. %(Rybicki \& Lightman 1979 \cite{rybicki}). 
-In the case of spectral flux (\ref{eq:fluxspot2}) there is no Doppler factor from the energy and thus there is one power less.
+Let us look the expression (\ref{eq:fluxbolo2}) for the bolometric flux more carefully. We see that there is a difference by a factor $\Dop^5$ between the flux from a rapidly rotating star and that from a slowly rotating star. One power of the Doppler factor came from the change in the projected area due to aberration as we already mentioned. From the four other powers of Doppler factor (appearing in the equation \ref{eq:bolointensity}) two comes from the solid angle transformation, one from the energy, and one from the time contraction of photon arrival \cite{rybicki}. %(Rybicki \& Lightman 1979 \cite{rybicki}). 
+In the case of spectral flux (\ref{eq:fluxspot2}) there is no Doppler factor from the energy, and thus there is one power less.
 
 
 %Two powers of $\Dop$ come
@@ -882,7 +883,7 @@ Thanks to the observed AMXPs (e.g., \source \ \cite{poutagierlinskisax}) we know
 In a more realistic model we would calculate the fluxes using two overlapping spots. The other spot would produce blackbody emission with isotropic beaming and the other one the power-law emission with e.g., a linear dependency on the cosine of the beaming angle $\sigma'$ (representing the accretion shock). The spots may have different shapes and sizes. %This model will be added to the pulse profile code in the near future.
 
 
-In the calculations of this thesis we use monochromatic photon number fluxes (in units of photons/cm$^{2}$/s/keV) since those are the fluxes we get from the observations. We must thus divide the fluxes we get from equation (\ref{eq:fluxspot2}) with the observed energy $E$. When calculating the flux we make again a grid of values of the derivatives $\d\cos\psi / \d\cos\alpha$ (same as $(\d\cos\alpha / \d\cos\psi)^{-1}$) with different $\alpha$ and $R$. The derivatives for each point are found by linear interpolation. 
+In the calculations of this thesis we use monochromatic photon number fluxes (in units of photons/cm$^{2}$/s/keV) since those are the fluxes we get from the observations. We must thus divide the fluxes we get from equation (\ref{eq:fluxspot2}) with the observed energy $E$. When calculating the flux, we make again a grid of values of the derivatives $\d\cos\psi / \d\cos\alpha$ (same as $(\d\cos\alpha / \d\cos\psi)^{-1}$) with different $\alpha$ and $R$. The derivatives for each point are found by linear interpolation. 
 
 
 \subsubsection{Time delays}
@@ -925,7 +926,7 @@ is the time difference between the photon in interest and a photon originating f
 is the time difference between photons with $b=0$ from $R$ and $r_{\mathrm{ref}}$ \cite{falkner}. 
 %%(...) Citate here to falkner
 
-In the case when $\alpha > \pi/2$ the corresponding delay is
+In the case when $\alpha > \pi/2$, the corresponding delay is
 \be\label{eq:delay22}
 \begin{split}
 c\Delta t(R,\alpha)= 2c\Delta t_{s}(p,\pi/2)-c\Delta t_{s}(R,\pi-\alpha)\\+2\left[ R-p+\rg\ln(\frac{R-\rg}{p-\rg})\right]-\delta t(r_{\mathrm{ref}},R).
@@ -953,7 +954,7 @@ The flux at the observed phase $\phiobs$ is
 ${F}_{\rm obs}(\phiobs)=F(\phi+\Delta\phi)$ with
 phase delay  $\Delta \phi=2\pi\nu\Delta t$
 calculated using (\ref{eq:delay2}), (\ref{eq:delay22}), and (\ref{eq:deltaphi2}).
-The contraction (or stretching) of the arrival times of photons is already taken account by one of the Doppler factors in the previous section, so we do not need to multiply flux again by $\delta$. 
+The contraction (or stretching) of the arrival times of photons is already taken into account by one of the Doppler factors in the previous section, so we do not need to multiply flux again by $\delta$. 
 
 %The effect of the photon arrival time contraction (or stretching) on
 %the observed flux is already accounted for by one of the Doppler factors, 
@@ -983,25 +984,22 @@ The spot could also be modeled to have a more complicated shape. %For a large sp
 %at least a few tens points in total are needed if one wants to achieve accuracy of %the order of 1\%. 
 
 
+
+
+
 \subsubsection{Comparison of the profiles}
 
-The new versions of the waveform code have been tested by comparing the pulse profiles to profiles obtained from other theoretical models or from a similar model developed by other groups. In all comparisons we assume the neutron star to be at distance $D = 10$ kpc. In the case of spherical star we have checked that the new version gives the same results as the old one \cite{poutabelo} (which assumed a spherical star and has been shown to give accurate results). 
-
-In the case of oblate star we have compared our light curves to those obtained by Morsink {\it et al.} (2007) \cite{morsink} and Cadeau {\it et al.} (2006) \cite{cadeau} (model called oblate S+D). The waveforms are computed for one small spot (we use spot angular size $\rho = 1 \degree$), which emits isotropic blackbody radiation ($\req = 16.4$ km, $M = 1.4$  $\msun$, $\nu = 600$ Hz, and $T_{\mathrm{eff}} = 2$ keV). The oblateness of the star is described with function (\ref{eq:rtheta}). The results are shown in Figures \ref{fig:mor3}, \ref{fig:cad3}, and \ref{fig:cad4}. They are in good agreement except in cases of some very high bending angles. In Figure \ref{fig:mor3} ($\thetas = 49 \degree$ and $i = 70 \degree$) and in Figure \ref{fig:cad4} ($\thetas = 15 \degree$ and $i = 100 \degree$) we see situations when the spot is on the other side of the pulsar, and only photons with high bending angles can reach the observer. Instead, in Figure \ref{fig:cad3} ($\thetas = 41 \degree$ and $i = 20 \degree$) most of the spot is all the time observed. 
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{figure}
-\centerline{\epsfig{file=mor3test.eps,width=12.0cm}}
+\begin{figure}[!ht]
+\centerline{\epsfig{file=mor3test.eps,width=11.0cm}}
 \caption{Light curves (bolometric flux) for light emitted from one infinitesimal spot with $\req = 16.4$ km, $M = 1.4$ $\msun$, $\nu = 600$ Hz, $\thetas = 49 \degree$, $i = 70 \degree$, and $T_{\mathrm{eff}} = 2$ keV . Results are compared with figure 3 of Morsink {\it et al}. (2007) \cite{morsink}. The blue dashed curve is the result of \cite{morsink} and the black solid line is our result.
 \label{fig:mor3}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{figure}
-\centerline{\epsfig{file=cad3test.eps,width=12.0cm}}
+\begin{figure}[!ht]
+\centerline{\epsfig{file=cad3test.eps,width=11.0cm}}
 \caption{The light curves (bolometric flux) for light emitted from one infinitesimal spot with otherwise similar same parameters as in Figure \ref{fig:mor3} but with $\thetas = 41 \degree$ and $i = 20 \degree$. The results are compared with figure 3 of Cadeau {\it et al}. (2006) \cite{cadeau}. The blue dashed curve is the result of \cite{cadeau} and the black solid line is our result (almost coinciding).
 \label{fig:cad3}}
 \end{figure}
@@ -1009,20 +1007,12 @@ In the case of oblate star we have compared our light curves to those obtained b
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{figure}
-\centerline{\epsfig{file=cad4test.eps,width=12.0cm}}
+\begin{figure}[!ht]
+\centerline{\epsfig{file=cad4test.eps,width=11.0cm}}
 \caption{The light curves (bolometric flux) for light emitted from one infinitesimal spot with otherwise similar same parameters as in Figure \ref{fig:mor3} but with $\thetas = 15 \degree$ and $i = 100 \degree$. The results are compared with figure 4 of Cadeau {\it et al}. (2006) \cite{cadeau}. The blue dashed curve is the result of \cite{cadeau} and the black solid line is our result.
 \label{fig:cad4}}
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-The profiles of pulsars have also been compared to profiles obtained from full ray tracing method (Nättilä \& Pihajoki 2017, in preparation), which show very similar results (see Figures \ref{fig:jpulse1}, \ref{fig:jpulse2}, and \ref{fig:jpulse3}). %correspond each other well. 
-The photon number fluxes at $2$, $6$, and $12$ keV energies, along with the bolometric photon number flux, are computed to both spherical ($R(\theta) = \req$) and oblate stars ($R(\theta)$ from equation \ref{rtheta2}). Angular distribution of radiation corresponds either to a blackbody with isotropic beaming (noted as "blackbody") or to a Hopf profile. %so some power-law or what is the energy-dependence then....?
-In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \degree$, $i = 60 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we compute the light curves with two different spinning frequencies ($\nu = 1$ Hz and $\nu = 400$ Hz) and with the spot size $\rho = 1 \degree$ or $30 \degree$ (Figures \ref{fig:jpulse1} and \ref{fig:jpulse2}). In the case of oblate star ($\req = 12$ km, $M = 1.4  ~\msun$, $\nu = 700$ Hz, $i = 45 \degree$, $\rho = 10 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we show the light curves with three different spot colatitudes $\thetas  = 18 \degree$,   $45 \degree$, and $90 \degree$ for the isotropic blackbody, along with $\thetas = 45 \degree$ and Hopf profile.
-
-
-%Show here some profiles..
 
 
 
@@ -1054,6 +1044,23 @@ In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \de
 
 
 
+The new versions of the waveform code have been tested by comparing the pulse profiles to profiles obtained from other theoretical models or from a similar model developed by other groups. In all comparisons we assume the neutron star to be at distance $D = 10$ kpc. In the case of spherical star we have checked that the new version gives the same results as the old one \cite{poutabelo} (which assumed a spherical star and has been shown to give accurate results). 
+
+In the case of oblate star we have compared our light curves to those obtained by Morsink {\it et al.} (2007) \cite{morsink} and Cadeau {\it et al.} (2006) \cite{cadeau} (model called oblate S+D). The waveforms are computed for one small spot (we use spot angular size $\rho = 1 \degree$), which emits isotropic blackbody radiation ($\req = 16.4$ km, $M = 1.4$  $\msun$, $\nu = 600$ Hz, and $T_{\mathrm{eff}} = 2$ keV). The oblateness of the star is described with function (\ref{eq:rtheta}). The results are shown in Figures \ref{fig:mor3}, \ref{fig:cad3}, and \ref{fig:cad4}. They are in good agreement except in cases of some very high bending angles. In Figure \ref{fig:mor3} ($\thetas = 49 \degree$ and $i = 70 \degree$) and in Figure \ref{fig:cad4} ($\thetas = 15 \degree$ and $i = 100 \degree$) we see situations when the spot is on the other side of the pulsar, and only photons with high bending angles can reach the observer. Instead, in Figure \ref{fig:cad3} ($\thetas = 41 \degree$ and $i = 20 \degree$) most of the spot is all the time observed. 
+
+
+The profiles of pulsars have also been compared to profiles obtained from full ray tracing method (Nättilä \& Pihajoki 2017, in preparation), which show very similar results (see Figures \ref{fig:jpulse1}, \ref{fig:jpulse2}, and \ref{fig:jpulse3}). %correspond each other well. 
+The photon number fluxes at $2$, $6$, and $12$ keV energies, along with the bolometric photon number flux, are computed to both spherical ($R(\theta) = \req$) and oblate stars ($R(\theta)$ from equation \ref{rtheta2}). Angular distribution of radiation corresponds either to a blackbody with isotropic beaming (noted as "blackbody") or to a Hopf profile. %so some power-law or what is the energy-dependence then....?
+In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \degree$, $i = 60 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we compute the light curves with two different spinning frequencies ($\nu = 1$ Hz and $\nu = 400$ Hz) and with the spot size $\rho = 1 \degree$ or $30 \degree$ (Figures \ref{fig:jpulse1} and \ref{fig:jpulse2}). In the case of oblate star ($\req = 12$ km, $M = 1.4  ~\msun$, $\nu = 700$ Hz, $i = 45 \degree$, $\rho = 10 \degree$, and $T_{\mathrm{eff}} = 2$ keV) we show the light curves with three different spot colatitudes $\thetas  = 18 \degree$,   $45 \degree$, and $90 \degree$ for the isotropic blackbody, along with $\thetas = 45 \degree$ and Hopf profile.
+
+
+%Show here some profiles..
+
+
+
+
+
+
 
 \subsection{Bayesian inference}
 
@@ -1061,7 +1068,7 @@ In the case of spherical star ($R = 12$ km, $M = 1.6$ $\msun$, $\thetas = 50 \de
 %http://math.nyu.edu/~mjlewis/foo.pdf %about Monte Carlo
 
 The model presented in the previous section can be used to constrain parameters of neutron stars by using Bayesian inference. We can fit the observed data to the model and use Markov Chain Monte Carlo (MCMC) methods to integrate over the parameter space to find the most probable values for the parameters of the model \cite{mc_methods_book}. The data can also be synthetic (as in this thesis) in order to test our methods and tools. %if the sampler will actually find the same values that were used when generating the data. 
-Previously the constraints of neutron star masses and radii with synthetic data have been studied e.g., by Ka Ho Lo {\it et al}., 2013 \cite{miller} and Miller \& Lamb, 2015 \cite{millerlamb2015}. %(for future space missions).   
+Previously the constraints for neutron star masses and radii with synthetic data have been studied e.g., by Ka Ho Lo {\it et al}. (2013) \cite{miller} and Miller \& Lamb (2015) \cite{millerlamb2015}. %(for future space missions).   
 More about the synthetic data of this thesis is presented in the Results section. 
 
 The aim of this work is to determine the most probable ("best-fit") values of the parameters in the pulse profile model, given the "observed" \ 
@@ -1081,7 +1088,7 @@ In the previous equation $p(\mathcal{D}|\textbf{y})$ is the likelihood or the pr
 
 \subsubsection{Metropolis-Hastings}
 
-The original standard MCMC algorithm is called the Metropolis algorithm \cite{metropolis53}\cite{hastings70}. %(Metropolis et al., 1953 \cite{metropolis53}; Hastings, 1970 \cite{hastings70}). 
+The original standard MCMC algorithm is called the Metropolis algorithm \cite{metropolis53} \cite{hastings70}. %(Metropolis et al., 1953 \cite{metropolis53}; Hastings, 1970 \cite{hastings70}). 
 It is a MCMC method for obtaining a sequence of random samples from a probability distribution. It generates these random samples by moving in a random walk; that is in some sequence $X_{1}...X_{\tstep}$. Metropolis algorithm, like all the other MCMC sampling methods, satisfies the so-called Markov property. It means that the conditional probability distribution of $X_{\tstep+1}$, given all the past elements, is independent of all the other states except the previous state \cite{kaiser}:
 
  \be \label{eq:markov_prop}
@@ -1343,7 +1350,7 @@ Before obtaining the final posterior probability distributions, we have reduced 
 The same averaged steps are also used in Figure \ref{fig:acexample}, where we show an example of the autocorrelation. The autocorrelations of all the six ensembles from one simulation are presented using the weights as observables (see equation \ref{eq:autocovariance}). The Figure shows the autocorrelation only approximatively since one should make sure that the ensemble averaged weights are calculated for walkers being at a same state of their sequence. We may, however, see that in general the correlation is not very strong, and we have reduced it by taking every fifth sample from the chain.%... Thinning we used is .... (TBD)  
 
 Since MCMC methods contain always noise, we have used digital filtering to reduce it from our posterior probability distributions. One-dimensional histograms have been smoothed using a Savintzky-Golay filter \cite{savgol}.
-It is a method to increase the signal-to-noise ratio without largely distorting the signal. This is achieved by fitting subsequent sub-sets of adjacent data points with a low-degree polynomial using the method of linear least squares. The central point of each sub-set is used to evaluate the data. The filter preserves the width of the posterior probability distribution and thus also the credible limits. Two-dimensional histograms are smoothed using a convolution with a two-dimensional Gaussian kernel with a $2\sigma_{\mathrm{E}}$ standard deviation for both axes. %add here what is sigma in pixels/parameter units? 
+It is a method to increase the signal-to-noise ratio without largely distorting the signal. This is achieved by fitting subsequent sub-sets of adjacent data points with a low-degree polynomial using the method of linear least squares. The central point of each sub-set is used to evaluate the data. The filter preserves the width of the posterior probability distribution and thus also the credible limits. Two-dimensional histograms are smoothed using a convolution with a two-dimensional Gaussian kernel. % with a $2\sigma_{\mathrm{E}}$ standard deviation for both axes. %add here what is sigma in pixels/parameter units? 
 In this case the width of the distribution is not exactly preserved, but we use a narrow kernel and convolve multiple times to reduce effects from this. 
 
 %now that we smooth stuff I would add a short paragraph to here about how that is done. I would state that MCMC methods are always noisy and we use some digital filttering to reduce this. Describe shortly that 1-dim histograms are smoothed using Savintzky-Golay filtter. Give short descrption and mention that it preserves the width of the distribution. This is done to preserve credible limits. Then say that 2dim histograms are smoothed using a convolution with a 2d Gaussian kernel. Check kernel 1sigma width, I vaguely rember it was 2 pixels which can be transformed to parameter values by multiplying with grid step width. This does not exactly preserve distribution width but we use narrow kernel and convolve multiple times to reduce effects from this.
@@ -1361,7 +1368,7 @@ In case of non-uniform priors for $\thetas$ and $i$ (Figures \ref{fig:polpostpr}
 In case of the polar spot, $\thetas$ is now between $3.2 \degree$ and $10 \degree$ with a $95 \%$ probability, and $i$ is larger than $61 \degree$ with a $68 \%$ probability. In case of the equatorial spot, $i$ is between $2.5 \degree$ and $13 \degree$ with a $95 \%$ probability, and $\thetas$ is larger than $60 \degree$ with a $68 \%$ probability. In both cases the most probable values are close to the correct values (see the Table \ref{table:conflimits}), especially for the smaller one of the angles. The posterior probability distribution for the larger angle is almost entirely determined by the assumed prior probability distribution.  
 
 The non-uniform priors for $\thetas$ and $i$ have also a strong effect on the posterior probability distributions for the mass and the radius. They are now also limited on both sides of the correct values having the maximum near the correct value. The prior information shifts the probability densities of mass and radius towards higher masses and radii, since the incorrect $\thetas - i$ solutions are in this case not contributing to the small masses and radii so strongly. %For some reason, the intermediate solutions for $i$ and $\thetas$ (where neither $i$ or $\thetas$ is very large or small) seemed to favour small radii and masses, when the priors were not applied. 
-It is not very clear why the intermediate solutions for $i$ and $\thetas$, where either $i$ or $\thetas$ is not particularly large or small, seem to favour small radii and masses. The incorrect solution in $\thetas$ might be compensated with a smaller $\req$ and thus also with a smaller mass, since the ratio between mass and radius is well constrained. 
+It is not very clear why the intermediate solutions for $i$ and $\thetas$, where either $i$ or $\thetas$ is not particularly large or small, seem to favor small radii and masses. One reason might be that the incorrect solution in $\thetas$ is compensated with a smaller $\req$ and thus also with a smaller mass, since the ratio between mass and radius is well constrained.   
 
 Most importantly, in case of non-uniform priors, both the lower and upper limits for mass and radius can now be determined. In case of the polar spot, the radius (correct value $12.0$ km) is between $9.62$ km and $13.4$ km, and the mass (correct value $1.5 ~\msun$) is between $1.2 ~\msun$ and $1.7 ~\msun$, with $68 \%$ probabilities. The most probable values are $11.6$ km and $1.4 ~\msun$. In case of the equatorial spot and with same the credible limits, the radius is between $9.39$ km and $13.3$ km, and the mass is between $1.2 ~\msun$ and $1.7 ~\msun$. The most probable values are $10.9$ km and $1.4 ~\msun$. 
 
