Front page and abstract corrections

--- a/mythesis.tex
+++ b/mythesis.tex
@@ -118,12 +118,12 @@
 
 \title{Mass and radius constraints for neutron stars
 from pulse shape modeling}
-\opinnayte{Master Thesis}
+\opinnayte{Master's Thesis}
 \author{Tuomo Salmi}
 \vuosi{2016}
 \oppiaine{Astronomy}
-\tarkastaja{J.P.}
-\tarkastaja{J.N.}
+\tarkastaja{Juri Poutanen}
+\tarkastaja{Joonas Nättilä}
 
 \maketitle
 \newpage
@@ -156,7 +156,7 @@ from pulse shape modeling}
 
 \begin{tiivistelma}%
         {Department of Physics and Astronomy}%
-        {Salmi, Tuomo}%
+        {SALMI, TUOMO:}%
         {Mass and radius constraints for neutron stars
 from pulse shape modeling}
         {Master's thesis, \pageref{LastPage} pages}%s., 3 Appendices}%
