--- a/tytiivis.sty
+++ b/tytiivis.sty
@@ -75,7 +75,7 @@
 	\thispagestyle{empty}
 	\begin{minipage}[t][\textheight]{\textwidth}
 	%\noindent TURUN YLIOPISTO\\
-	\noindent University of Turku\\
+	\noindent UNIVERSITY OF TURKU\\
 	{#1}
 	\begin{list}{}{%
 		\renewcommand{\makelabel}[1]{{##1}\hfil}% muokkasin
